# aamuzbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot_polling.py  fly.toml  pyproject.toml  railway.json  requirements.txt  vercel.json
.vercel/: project.json
.vercel/cache/index/: .coverage  .env.example  pyproject.toml
.vercel/cache/index/.pytest_cache/v/cache/: lastfailed  nodeids
.vercel/cache/index/api/: bot_init.py  index.py
.vercel/cache/index/charset_normalizer-3.4.1.dist-info/: RECORD
.vercel/cache/index/mutagen-1.47.0.dist-info/: RECORD
.vercel/cache/index/python_dotenv-1.0.0.dist-info/: RECORD
.vercel/cache/index/src/bot/handlers/: base.py
.vercel/cache/index/src/bot/routers/: web.py
.vercel/cache/index/src/bot/services/: music.py
.vercel/cache/index/src/bot/utils/: downloader.py  formatting.py
.vercel/cache/index/src/bot/web/: __init__.py
.vercel/cache/index/tests/: test_base_handler.py  test_config.py  test_downloader.py  test_formatting.py  test_inline_handler.py  test_music_service.py
.vercel/cache/index/uvicorn-0.27.0.dist-info/: RECORD
.vercel/cache/index/yandex_music-2.1.1.dist-info/: METADATA  RECORD
api/: bot_init.py  index.py  vercel-build.sh  webhook.py
src/bot/: app.py  main.py  update_webhook.py
src/bot/config/: 333ngrok.py  config.py
src/bot/handlers/: __init__.py  base.py  inline.py  music.py
src/bot/middlewares/: logging.py
src/bot/services/: music.py
src/bot/utils/: downloader.py
src/bot/web/: routes.py
